client/src/App.css
@font-face {
  font-family: "brandongrotw01-lightregular";
  src: url("fonts/brandon_grot_w01_light-webfont.woff2") format("woff2"),
    url("fonts/brandon_grot_w01_light-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: "montserrat";
  src: url("fonts/montserrat-regular-webfont.woff2") format("woff2"),
    url("fonts/montserrat-regular-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: "oswald";
  src: url("fonts/Oswald-Medium.woff2") format("woff2"),
    url("fonts/Oswald-Medium.woff") format("woff");
  font-weight:normal;
  font-style:normal;
}

:root {
  --green: #469B47;
  --black: #494949;
  --off-white: #F8F9FA;
  --orange: #FF8C42;
}

.content-container {
  padding-top: 140px;
}

/* ----- navigation header ----- */

.navigation-container {
  min-height: 140px;
  background: white;
}

.navigation-logo-container {
  text-align:center;
  margin: 10px 30px 0 0;
}

.logo {
  height: 60px;
  object-fit: cover;
}

.black-link, .black-link a {
  color:black;
}

.navigation-link {
  margin: 60px 35px 0 35px;
}

.navigation-start {
  margin: 28px 0 0 25px;
}

.navigation-start #loginStatus {
  font-size: 18px;
  font-family: "montserrat";
}

#loginButton {
  text-decoration:none;
  color:black;
  float:right;
  margin-top: 10px; 
}

.login-hello {
  font-size: 20px;
  /* text-align: left; */
  color: black;
  /* margin-bottom:5px; */
  position: absolute;
  z-index: 1;
  /* padding: -100px 0 0 0; */
}

#logoutButton {
  text-decoration:none;
  color:black;
  float:right;
  margin: 30px 0 0 22px;
}

/* ----- footer ----- */

.center-content {
  text-align: center;
}

.footer-container {
  margin-bottom: 20px;
}

#footer-margin-padding {
  margin-top: 0;
  margin-bottom: 5px;
  padding-top: 0;
  padding-bottom: 0;
}

#green {
  color: var(--green);
}

.black-grey {
  color: var(--black);
}
.black-grey:hover {
  color: black;
}

.footer-socials-container {
  margin-left:12px;
}

#social-icon {
  color: grey;
  transition: .1s;
}
#social-icon:hover {
  color: var(--black);
}

.mailing-list-spacing {
  margin-top: 40px;
}

.never-miss-update-text {
  font-size: 12px;
  padding-top: 25px;
  margin: 0 0 0 -156px;
}

.email-section {
  padding-left: 10px;
}

/* ----- landing page ----- */
.container {
  position: relative;
  color: var(--black);
}

.title-image-container {
  color: white;
  margin-top: -40px;
}
.title-image {
  width: 100%;
  height: 800px;
  object-fit: cover;
}

.top-left {
  position: absolute;
  top: 90px;
  left: 16px;
  float: left;
  margin-left: 1.5em;
}

.home_title {
  font-size: 55px;
  line-height: 55px;
  margin: 0;
  padding: 0;
}
.home_subtitle {
  margin-bottom: 180px;
}
.home_subtitle p {
  font-size: 18px;
  line-height: 35px;
  margin: 0;
  padding: 0;
}

.plant-based-text {
  margin-bottom: 50px;
}
.plant-based-text p {
  font-size: 22px;
  /* font-weight: bold; */
}

.bottom-left {
  position: absolute;
  bottom: 8px;
  margin-left: 1.8em;
  padding-bottom: 12px;
  font-size: 18px;
}

.bottom-left a {
  color: white;
  -webkit-transition: .2s;
  -moz-transition: .2s;
  -o-transition: .2s;
  transition: .2s;
}
.bottom-left a:hover {
  color: white;
  text-decoration: none;
}
#already-a-member:hover {
  /* color: #607122; */
  color: var(--black)
}

.zero-waste-container {
  margin-top: 50px;
  margin-bottom: 20px;
}
.zero-waste {
  font-weight: bold;
  line-height: 1.4em;
  font-size: 41px;
  letter-spacing: .25em;
  margin: 0;
  padding: 0;
}
.zero-waste-subtext {
  text-align: center;
}
.zero-waste-subtitle {
  /* color: #617221; */
  color: var(--green);
  font-weight: bold;
  letter-spacing: .05em;
  font-size: 24px;
}
.zero-waste-subtext p {
  text-align: left;
  font-size: 16px;
}
.zero-waste-cell {
  padding: 0 20px 0 20px;
  display: inline-block;
  text-align: center;
}

.box-shadow-top {
  box-shadow:inset 0 -15px 10px -16px grey;
  margin: auto;
  width: 960px;
}
.box-shadow-bottom {
  box-shadow:inset 0 15px 10px -16px grey;
  margin: auto;
  width: 960px;
  padding-bottom: 25px;
}

.four-items-grid {
  font-size: 14px;
  color: #4D4D4D;
  margin: 50px 0 0 20px;
}
.four-items-grid h4 {
  font-size: 27px;
}
.eat-better-now-button-container {
  margin-left: 30px;
}

.img-2-carrot {
  width: 100%;
  height: 80%;
  margin: 80px 0 0 -30px;
  object-fit: cover;
}

.delivered-padding {
  padding: 80px 80px;
}
.delivered-weekly-image {
  width: 700px;
  background-size: 100%;
}
.delivered-weekly-container {
  text-align: center;
  color: white;
  background: rgba(70, 155, 71, 0.86);
  width: 750px;
  height: 700px;
}
.delivered-weekly-container2 {
  text-align: center;
  padding: 0 50px 0 50px;
}
.delivered-titles-container {
  padding: 40px 0 25px;
}
.delivered-title {
  letter-spacing: .25em;
  font-size: 42px;
}
.delivered-title2 {
  letter-spacing: .1em;
  font-size: 33px;
  margin-top: -12px;
}
.delivered-weekly-bullets-container {
  text-align: left;
  padding: 10px 0 10px 100px;
}
.delivered-bullets-text {
  font-size: 24px;
  line-height: 1.5em;
}
.delivered-plans-start {
  margin: 0 0 0 -100px;
  padding: 10px 0 15px 0;
}
.delivered-price-container * {
  display: inline;
}
.delivered-price {
  font-size: 37px;
  line-height: .7em;
  margin-left: 50px;
}
.delivered-week {
  font-size: 18px;
  letter-spacing: .2em;
  font-weight: bold;
}
.pause-anytime {
  padding-bottom: 20px;
}

.fresh-menu-title {
  text-align: center; 
  font-weight: bold;
  font-size: 37px; 
  /* color: #617221; */
  color: var(--green);
}
.fresh-menu-subtitle-container {
  margin: 30px 0 40px 0;
}
.fresh-menu-subtitle {
  font-size: 22px;
  margin: 5px;
  padding: 0;
}
.menu-next-week-button-container {
  background-size: 100% 100%;
  margin-top: 50px;
}

.menu-carousel-img {
  width: 270px;
  height: 270px;
  -webkit-transition: .2s;
  -moz-transition: .2s;
  -o-transition: .2s;
  transition: .2s;
}
/* ... */

